--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
+body{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container{
+   width: 90vw ;
+   margin: 10px;
+   padding: 15px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.sub-container{
+    display: grid;
+    grid-template-columns: 40% 40%;
+    column-gap: 15px;
+    padding: 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.boxes{
+    border: 1px solid black;
+    /* width: 30%; */
+    border-radius: 7px;
+    padding: 5px;
+    margin: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+.filter-box,.input-box{
+    width: 400px;
+    height: 30px;
+    border: 1px solid rgb(49, 47, 47);
+    border-radius: 5px;
+    box-shadow: 1px 1px 3px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.lookUp-box{
+    padding: 5px;
+    margin: 5px;
+    width: 100px;
+    height: 30px;
+    border: 1px solid rgb(49, 47, 47);
+    border-radius: 5px;
+    box-shadow: 1px 1px 3px;
+}
+
+.loader{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
